--- a/index.html
+++ b/index.html
@@ -11,21 +11,34 @@
       margin: 0;
       padding: 0;
       margin-top: 2cm; /* Top margin for the body */
+      overflow-x: hidden; /* Prevent horizontal scrolling */
     }
 
-    /* Title and Subtitle Section */
+    /* Title and Subtitle Section - Fixed at the top */
     .title-section {
       text-align: center;
       font-size: 1.8em;
       font-weight: bold;
       color: #333;
-      margin-top: 2cm; /* Consistent 2cm gap from the top */
+      margin-top: 0; /* No margin on top as it's fixed at the top */
+      position: fixed;
+      top: 2cm; /* Fixed position */
+      width: 100%;
+      background-color: white; /* Prevents overlap with content */
+      padding: 0.5em 0;
+      z-index: 10;
     }
     .subtitle-section {
       text-align: center;
       font-size: 1em;
       color: #777;
-      margin-top: 0; /* Subtitle has no extra margin */
+      margin-top: 0.5em;
+      position: fixed;
+      top: 3.2cm; /* Below the title */
+      width: 100%;
+      background-color: white; /* Prevents overlap */
+      padding: 0.5em 0;
+      z-index: 10;
     }
 
     /* Navbar Styles */
@@ -37,7 +50,11 @@
       padding: 10px 0;
       margin-left: 8cm;
       margin-right: 8cm;
-      margin-top: 2cm; /* Navbar should have a top margin of 2cm */
+      margin-top: 4cm; /* Space below the title and subtitle */
+      position: fixed;
+      top: 4.2cm; /* Fixed navbar position */
+      width: 100%;
+      z-index: 20; /* Navbar should be on top of content */
     }
     .navbar a {
       color: #ffffff;
@@ -56,6 +73,8 @@
       text-align: justify;
       margin-left: 8cm;
       margin-right: 8cm;
+      margin-top: 2cm; /* Added space below the navbar */
+      padding-top: 10em; /* Added padding to ensure content is below fixed title, subtitle, and navbar */
     }
 
     /* Profile Photo */
@@ -73,6 +92,8 @@
       opacity: 0;
       transform: translateY(20px);
       transition: opacity 0.5s ease, transform 0.5s ease; /* Smooth fade and slide effect */
+      max-height: calc(100vh - 12cm); /* Ensure the section fits within the viewport and doesn't overflow */
+      overflow-y: auto; /* Allow scrolling for long content */
     }
     .section.active {
       display: block;
@@ -139,7 +160,7 @@
 </head>
 <body>
   <!-- Title and Subtitle -->
-  <div class="title-section">Vikrant ..V Kamble</div>
+  <div class="title-section">Vikrant ..V.. Kamble</div>
   <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
 
   <!-- Navbar -->
@@ -184,17 +205,11 @@
     <div id="teaching" class="section">
       <h2>Teaching</h2>
       <h3>Instructor</h3>
-      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
-      <h3>TA Courses</h3>
-      <p>Graduate Courses:</p>
+      <p>I will be teaching ECON101: Introduction to Microeconomics at the University of Delaware (Spring 2024).</p>
+      <h3>Teaching Assistant</h3>
       <ul>
-        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
-      </ul>
-      <p>Undergraduate Courses:</p>
-      <ul>
-        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
-        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON805: Graduate-level Econometrics I</li>
+        <li>ECON302: Intermediate Microeconomics</li>
       </ul>
       <h3>Guest Lectures</h3>
       <ul>
