--- a/index.html
+++ b/index.html
@@ -11,34 +11,23 @@
       margin: 0;
       padding: 0;
       margin-top: 2cm; /* Top margin for the body */
-      overflow-x: hidden; /* Prevent horizontal scrolling */
+      height: 100%;
+      overflow-x: hidden; /* Prevent horizontal overflow */
     }
 
-    /* Title and Subtitle Section - Fixed at the top */
+    /* Title and Subtitle Section */
     .title-section {
       text-align: center;
       font-size: 1.8em;
       font-weight: bold;
       color: #333;
-      margin-top: 0; /* No margin on top as it's fixed at the top */
-      position: fixed;
-      top: 2cm; /* Fixed position */
-      width: 100%;
-      background-color: white; /* Prevents overlap with content */
-      padding: 0.5em 0;
-      z-index: 10;
+      margin-top: 2cm; /* Consistent 2cm gap from the top */
     }
     .subtitle-section {
       text-align: center;
       font-size: 1em;
       color: #777;
-      margin-top: 0.5em;
-      position: fixed;
-      top: 3.2cm; /* Below the title */
-      width: 100%;
-      background-color: white; /* Prevents overlap */
-      padding: 0.5em 0;
-      z-index: 10;
+      margin-top: 0; /* Subtitle has no extra margin */
     }
 
     /* Navbar Styles */
@@ -48,13 +37,7 @@
       display: flex;
       justify-content: center;
       padding: 10px 0;
-      margin-left: 8cm;
-      margin-right: 8cm;
-      margin-top: 4cm; /* Space below the title and subtitle */
-      position: fixed;
-      top: 4.2cm; /* Fixed navbar position */
-      width: 100%;
-      z-index: 20; /* Navbar should be on top of content */
+      margin-top: 2cm; /* Navbar should have a top margin of 2cm */
     }
     .navbar a {
       color: #ffffff;
@@ -73,16 +56,25 @@
       text-align: justify;
       margin-left: 8cm;
       margin-right: 8cm;
-      margin-top: 2cm; /* Added space below the navbar */
-      padding-top: 10em; /* Added padding to ensure content is below fixed title, subtitle, and navbar */
+      margin-top: 2cm;
+      overflow-y: auto;
+      max-height: 70vh; /* Limit content section height */
     }
 
-    /* Profile Photo */
-    .profile-photo {
-      display: block;
-      margin: 20px auto;
+    /* Profile Photo (Fixed) */
+    .profile-container {
+      position: fixed;
+      top: 2cm; /* Fixed position with 2cm top margin */
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
       width: 250px;
+    }
+
+    .profile-photo {
+      width: 100%;
       height: auto;
+      border-radius: 50%;
     }
 
     /* Section Styles */
@@ -92,8 +84,6 @@
       opacity: 0;
       transform: translateY(20px);
       transition: opacity 0.5s ease, transform 0.5s ease; /* Smooth fade and slide effect */
-      max-height: calc(100vh - 12cm); /* Ensure the section fits within the viewport and doesn't overflow */
-      overflow-y: auto; /* Allow scrolling for long content */
     }
     .section.active {
       display: block;
@@ -160,8 +150,14 @@
 </head>
 <body>
   <!-- Title and Subtitle -->
-  <div class="title-section">Vikrant ..V.. Kamble</div>
+  <div class="title-section">Vikrant V Kamble</div>
   <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
+
+  <!-- Profile Section (Fixed) -->
+  <div class="profile-container">
+    <img src="pic_t.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+    <h1>Welcome! My name is Vikrant.</h1>
+  </div>
 
   <!-- Navbar -->
   <div class="navbar">
@@ -175,8 +171,6 @@
   <div class="content">
     <!-- Home Section -->
     <div id="home" class="section active">
-      <img src="pic_t.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-      <h1>Welcome! My name is Vikrant.</h1>
       <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
       <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
@@ -205,11 +199,17 @@
     <div id="teaching" class="section">
       <h2>Teaching</h2>
       <h3>Instructor</h3>
-      <p>I will be teaching ECON101: Introduction to Microeconomics at the University of Delaware (Spring 2024).</p>
-      <h3>Teaching Assistant</h3>
+      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
+      <h3>TA Courses</h3>
+      <p>Graduate Courses:</p>
       <ul>
-        <li>ECON805: Graduate-level Econometrics I</li>
-        <li>ECON302: Intermediate Microeconomics</li>
+        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
+      </ul>
+      <p>Undergraduate Courses:</p>
+      <ul>
+        <li>ECON100 | Introduction to Microeconomics | Spring 2022, Fall 2023</li>
+        <li>ECON200 | Principles of Microeconomics | Fall 2022, Spring 2023, Fall 2024</li>
       </ul>
       <h3>Guest Lectures</h3>
       <ul>
